--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ environment:
   sdk: ">=2.5.2 <3.0.0"
 
 dependencies:
-  provider: ^3.1.0+1
+  provider: ^4.1.3
   intl: ^0.16.1
   http: ^0.12.1
   flutter:
