--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   provider: ^4.1.3
   intl: ^0.16.1
   http: ^0.12.1
+  shared_preferences: ^0.5.7+3
   flutter:
     sdk: flutter
 
